src/App.css
.App {
  background-color: #302e2e;
  font-family: "Fira Code", monospace;
  color: #e03c8a;
}

h3 {
  margin-bottom: 50px;
}

h2,
h5 {
  color: #2590da;
}

h4 {
  margin-top: 10px;
  border-bottom: 2px solid #e03c8a;
}
h6 {
  color: #e67212;
}

canvas {
  margin-left: 150px;
  margin-top: 85px;
  margin-bottom: 20px;
  border: 2px solid #e67212;
  box-shadow: 5px 4px 15px #e671128d;
  border-radius: 5px;
}

footer {
  width: 100%;
  margin-top: 70px;
  padding: 50px;
  font-size: 1rem;
  text-align: center;
  box-shadow: 1px 6px 30px #e03c8a;
  border-top: ridge;
}

footer a {
  font-size: 1.25rem;
  color: #e67212;
}
footer a:hover {
  color: #e03c8a;
}

header {
  width: 100%;
  padding: 30px;
  text-align: center;
}

button {
  width: 115px;
  height: 37px;
  background-color: #313131;
  color: #e03c8a;
  border: 1px solid #e03c8a;
  box-shadow: 5px 4px 9px #e03c8a;
}

button:hover {
  color: #e67212;
  border: 1px solid #e67212;
  background-color: #313131;
  /* // margin-top: 5px; */
  box-shadow: 5px 4px 9px #e67212;
}

.slider-speed {
  display: inline-block;
  margin-top: 30px;
  margin-left: 160px;
  width: 100%;
  direction: rtl;
}

.preset-button {
  margin: 10px;
  width: 200px;
  height: 37px;
  background-color: #313131;
  color: #e67212;
  border: 1px solid #e67212;
  box-shadow: 5px 4px 9px #e67212;
}
.preset-button:hover {
  color: #e03c8a;
  border: 1px solid #e03c8a;
  background-color: #313131;

  box-shadow: 5px 4px 9px #e03c8a;
}

.control-buttons {
  padding: 10px;
  display: flex;
  justify-content: space-between;
  max-width: 100%;
  margin-left: 150px;
}

.boardgame {
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.rules {
  display: flex;
  flex-direction: column;
  margin-top: 25px;
  padding-top: 5rem;
}
.presets {
  margin-left: 52px;
  display: flex;
  flex-direction: column;
  max-width: 100%;
}
.preset-title {
  text-align: center;
  margin-top: 5rem;
}
.preset-button-container {
  display: flex;
  width: 100%;
  justify-content: center;
}

.buttons {
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  text-align: center;
  margin-top: 100px;
}

.game {
  display: flex;
  width: 100%;
}

